--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vdora-cli",
-    "version": "0.1.3-beta.1",
+    "version": "0.1.3",
     "description": "一个命令行工具",
     "bin": {
         "vdora": "bin/vdora.js",
