--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "vue": "^2.5.2"
   },
   "devDependencies": {
-    "vdora-cli": "^0.1.2",
+    "vdora-cli": "^0.1.3",
     "vue-template-compiler": "^2.5.2"
   },
   "engines": {
@@ -25,5 +25,8 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "buildConfig": {
+    "output.path": "./dist"
+  }
 }
