--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
     "name": "vdora-cli",
-    "version": "0.1.3",
-    "description": "一个命令行工具",
+    "version": "0.1.7",
+    "description": "Vue.js projects build tool",
+    "keywords": [
+        "vue",
+        "webpack",
+        "cli",
+        "vue cli",
+        "build tool",
+        "build",
+        "tool"
+    ],
     "bin": {
         "vdora": "bin/vdora.js",
         "vdora-dev": "bin/vdora-dev.js",
