--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vdora-cli",
-    "version": "0.1.8",
+    "version": "0.2.0",
     "description": "Vue.js projects build tool",
     "keywords": [
         "vue",
@@ -9,12 +9,14 @@
         "vue cli",
         "build tool",
         "build",
+        "publish",
         "tool"
     ],
     "bin": {
         "vdora": "bin/vdora.js",
         "vdora-dev": "bin/vdora-dev.js",
-        "vdora-build": "bin/vdora-build.js"
+        "vdora-build": "bin/vdora-build.js",
+        "vdora-publish": "bin/vdora-publish.js"
     },
     "author": "aidenZou<aidenzou@gmail.com>",
     "repository": {
@@ -58,6 +60,7 @@
         "ora": "^1.3.0",
         "portfinder": "^1.0.13",
         "progress-bar-webpack-plugin": "^1.10.0",
+        "qiniu": "^7.2.0",
         "request": "^2.81.0",
         "sass-loader": "^6.0.6",
         "url-loader": "^0.6.2",
